market data is done

--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
-        "bootstrap": "^4.1.0",
+        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.6.11"
+        "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "@devexpress/dx-react-chart": "^2.7.5",
+        "@devexpress/dx-react-chart-bootstrap4": "^2.7.5",
+        "@devexpress/dx-react-core": "^2.7.5",
         "fs": "0.0.1-security",
+        "highcharts": "^9.0.1",
+        "highcharts-react-official": "^3.0.0",
         "net": "^1.0.2",
+        "react-easy-chart": "^1.0.0",
         "tls": "0.0.1",
         "yahoo-finance": "^0.3.6"
     }
