--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "@chakra-ui/react": "^1.3.4",
         "@devexpress/dx-react-chart": "^2.7.5",
         "@devexpress/dx-react-chart-bootstrap4": "^2.7.5",
         "@devexpress/dx-react-core": "^2.7.5",
+        "@emotion/react": "^11.1.5",
+        "@emotion/styled": "^11.1.5",
+        "framer-motion": "^3.10.0",
         "fs": "0.0.1-security",
         "highcharts": "^9.0.1",
         "highcharts-react-official": "^3.0.0",
